@@ -35,13 +35,13 @@
 #define SPIF_AVL_TREE_NODE_ISNULL(o)            (SPIF_AVL_TREE_NODE(o) == SPIF_NULL_TYPE(avl_tree_node))
 #define SPIF_OBJ_IS_AVL_TREE_NODE(o)            (SPIF_OBJ_IS_TYPE((o), avl_tree_node))
 
-SPIF_DEFINE_OBJ(avl_tree_node) {
+SPIF_DECL_OBJ(avl_tree_node) {
     spif_obj_t data;
     spif_int8_t balance;
     spif_avl_tree_node_t left, right;
 };
 
-SPIF_DEFINE_OBJ(avl_tree) {
+SPIF_DECL_OBJ(avl_tree) {
     SPIF_DECL_PARENT_TYPE(obj);
     size_t len;
     spif_avl_tree_node_t root;
