@@ -48,7 +48,7 @@
 
 
 /* An tok object is a string tokenizer */
-SPIF_DEFINE_OBJ(tok) {
+SPIF_DECL_OBJ(tok) {
     SPIF_DECL_PARENT_TYPE(obj);
     spif_str_t src;
     spif_char_t quote, dquote, escape;
